# UCSD-CSE256-2026WI-PA1

./: .gitignore  BOWmodels.py  DANmodels.py  README.md  SubwordDANmodels.py  main.py  plot.ipynb  pyproject.toml  run_dan.sh  run_dan_experiments.sh  run_subworddan.sh
tokenizer/: __init__.py  bpe.py  tokenizer.py
tokenizer/bpe_sentiment/10000/: merges.txt  vocab.json
