[project]
name = "cse256-pa1-wi26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "ipdb>=0.13.13",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "regex>=2026.1.15",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
]
